# Hexlink

./: .copier-answers.hexdoc-mod.yml  .env  .gitignore  README.md  TODO.txt  build.gradle  gradle.properties  pyproject.toml
.github/workflows/: build_docs.yml
doc/: README.md  hexdoc.toml  nodemon.json
doc/resources/assets/hexlink/lang/: en_us.flatten.json5  zh_cn.flatten.json5
doc/src/hexdoc_hexlink/: _hooks.py
doc/src/hexdoc_hexlink/_templates/pages/hexlink/: example.html.jinja
doc/src/hexdoc_hexlink/patchouli/: pages.py
docs/: index.html
hexdoc/: .gitignore
src/client/kotlin/jempasam/hexlink/: HexlinkModClient.kt
src/client/kotlin/jempasam/hexlink/block/: HexlinkBlockClient.kt
src/client/kotlin/jempasam/hexlink/config/: Config.kt  HexlinkClientConfig.kt
src/client/kotlin/jempasam/hexlink/emi/: HexlinkEMIPlugin.kt  VortexEmiRecipe.kt
src/client/kotlin/jempasam/hexlink/entity/: HexlinkEntityRenderers.kt
src/client/kotlin/jempasam/hexlink/hud/: SpellHUD.kt
src/client/kotlin/jempasam/hexlink/lens/: HexlinkScryingLensDisplay.kt  SpiritContainerLensDisplay.kt  SpiritInOutLensDisplay.kt  VortexScryingLensDisplay.kt
src/client/kotlin/jempasam/hexlink/network/: ClientSendDataPacket.kt
src/client/kotlin/jempasam/hexlink/particle/: HexlinkClientParticles.kt  MovingSpiritParticle.kt
src/client/kotlin/jempasam/hexlink/render/: RenderHelper.kt
src/client/resources/: hexlink.client.mixins.json
src/client/resources/assets/hexlink/blockstates/: big_tablet.json  vortex.json
src/client/resources/assets/hexlink/lang/: en_us.json  fr_fr.json  zh_cn.json
src/client/resources/assets/hexlink/particles/: spirit_flux.json
src/main/java/jempasam/hexlink/mixin/: CanTakeMediaFromInventory.java  LootManagerMixin.java  MsgNewSpellPatternSynMixin.java  MsgShiftScrollSynMixin.java  ShiftScrollListenerMixin.java
src/main/kotlin/jempasam/hexlink/: HexlinkMod.kt  HexlinkPatterns.kt  HexlinkRegistry.kt
src/main/kotlin/jempasam/hexlink/action/: GetBlockType.kt
src/main/kotlin/jempasam/hexlink/block/: FacingSpiritContainerBlock.kt  HexVortexBlock.kt  HexlinkBlocks.kt  IotaHolderBlock.kt  SpiritContainerBlock.kt
src/main/kotlin/jempasam/hexlink/cc/: HexlinkComponents.kt  HexlinkLevelData.kt
src/main/kotlin/jempasam/hexlink/command/: HexlinkCommands.kt
src/main/kotlin/jempasam/hexlink/creative_tab/: HexlinkCreativeTab.kt
src/main/kotlin/jempasam/hexlink/data/: HexlinkConfiguration.kt  HexlinkDataLoader.kt  HexlinkDataLoaders.kt  HexlinkExtractorDataLoader.kt  HexlinkSpiritDataLoader.kt  JsonEntryDataLoader.kt  SpecialExtractorDataLoader.kt  SpecialSpiritDataLoader.kt  VortexRecipeDataLoader.kt
src/main/kotlin/jempasam/hexlink/entity/: HexlinkEntities.kt
src/main/kotlin/jempasam/hexlink/gamerule/: HexlinkGamerules.kt
src/main/kotlin/jempasam/hexlink/iota/: BlockTypeIota.kt  HexlinkIotas.kt  SpiritIota.kt
src/main/kotlin/jempasam/hexlink/item/: ExtractorCatalyzerItem.kt  GreatFocus.kt  GreatFocusItem.kt  (+15 more)
src/main/resources/: fabric.mod.json  hexlink.mixins.json
(+435 files in other folders)
